--- a/roboto.html
+++ b/roboto.html
@@ -7,5 +7,5 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700">
+<link rel="stylesheet" href="roboto_400_300_300italic_400italic_500_500italic_700_700italic.css">
+<link rel="stylesheet" href="roboto_mono_400_700.css">
